changed mappedSchema in routes
