# routes/serviceAppointments.js
@@ -11,5 +11,5 @@ const {
 serviceAppointmentRouter.put("/updateAppointment/:id", updateAppointment());
 serviceAppointmentRouter.get("/getAppointment", getAppointment());
 serviceAppointmentRouter.delete("/cancelAppointment/:id", cancelAppointment());
-registerDefinition(serviceAppointmentRouter, {tags:'appointment', mappedSchema:'ServiceAppointment',basePath:'/serviceAppointment'})
+registerDefinition(serviceAppointmentRouter, {tags:'appointment', mappedSchema:'appointment',basePath:'/serviceAppointment'})
 module.exports.serviceAppointmentRouter = serviceAppointmentRouter;
